Fix header & jump to query result after domain_select

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 50px;
+    padding-top: 70px;
     font-family: PingFangSC-Regular, Microsoft Yahei, HeitiSC, Helvetica;
 }
 
@@ -316,10 +317,6 @@ a {
 
 .navbar-brand > img {
     width: 100%;
-}
-
-.navbar-static-top {
-    z-index: 50;
 }
 
 .navbar-header > .navbar-toggle {
@@ -1295,7 +1292,6 @@ button.close:focus {
     /*background-color: #f5f5f9;*/
     /*background-color: #fff;*/
     background-color: #EEEFF1;
-    padding-top: 70px;
     padding-bottom: 0px;
 }
 
